Update progress report 2020-11-28

--- a/docs/progressreport/index.bib
+++ b/docs/progressreport/index.bib
@@ -7,32 +7,15 @@
 }
 
 @inproceedings{ref2,
-  title={Refactoring for parameterizing {J}ava classes},
-  author={Kiezun, Adam and Ernst, Michael D and Tip, Frank and Fuhrer, Robert M},
-  booktitle={29th International Conference on Software Engineering (ICSE'07)},
-  pages={437--446},
-  year={2007},
-  organization={IEEE}
-}
-
-@misc{ref3,
-  title={Trends for {T}ype{S}cript, mypy and {P}ython typing},
-  author={{Google Trends}},
-  url={https://trends.google.com/trends/explore?date=2015-01-01\%202020-09-30\&q=\%2Fm\%2F0n50hxv,mypy,python\%20typing},
-  year={2020},
-  note={Accessed 2020-11-21}
-}
-
-@inproceedings{ref4,
   title={TypeTool: A type inference visualization tool},
-  author={Simoes, Hugo and Florido, M{\textbackslash'a}rio},
+  author={Simoes, Hugo and Florido, Mário},
   booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
   pages={48--61},
   year={2004},
   organization={Citeseer}
 }
 
-@article{ref5,
+@article{ref3,
   title={TILC: The interactive lambda-calculus tracer},
   author={Ruiz, David and Villaret, Mateu},
   journal={Electronic Notes in Theoretical Computer Science},
@@ -42,16 +25,16 @@
   publisher={Elsevier}
 }
 
-@inproceedings{ref6,
+@inproceedings{ref4,
   title={TypeTool: A type inference visualization tool},
-  author={Simoes, Hugo and Florido, M{\textbackslash'a}rio},
+  author={Simoes, Hugo and Florido, Mário},
   booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
   pages={48--61},
   year={2004},
   organization={Citeseer}
 }
 
-@article{ref7,
+@article{ref5,
   title={A visualisation of polymorphic type checking},
   author={Jung, Yang and Michaelson, Greg},
   journal={Journal of Functional Programming},
@@ -61,48 +44,7 @@
   year={2000}
 }
 
-@article{ref8,
-  title={A theory of type polymorphism in programming},
-  author={Milner, Robin},
-  journal={Journal of computer and system sciences},
-  volume={17},
-  number={3},
-  pages={348--375},
-  year={1978},
-  publisher={Elsevier}
-}
-
-@article{ref9,
-  title={Proofs about a folklore let-polymorphic type inference algorithm},
-  author={Lee, Oukseh and Yi, Kwangkeun},
-  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
-  volume={20},
-  number={4},
-  pages={707--723},
-  year={1998},
-  publisher={ACM New York, NY, USA}
-}
-
-@article{ref10,
-  title={Complete and easy bidirectional typechecking for higher-rank polymorphism},
-  author={Dunfield, Joshua and Krishnaswami, Neelakantan R},
-  journal={ACM SIGPLAN Notices},
-  volume={48},
-  number={9},
-  pages={429--442},
-  year={2013},
-  publisher={ACM New York, NY, USA}
-}
-
-@misc{ref11,
-  author={{Stack Overflow}},
-  title={{S}tack {O}verflow Developer Survey},
-  year={2020},
-  url={https://insights.stackoverflow.com/survey/2020},
-  note={Accessed 2020-11-21}
-}
-
-@misc{ref12,
+@misc{ref6,
   author={Ros, Greg},
   title={parjs: Parser Combinator Library},
   year={2020},
@@ -110,26 +52,10 @@
   note={Accessed 2020-11-19}
 }
 
-@misc{ref13,
+@misc{ref7,
   author={Plaindoux, Didier and Zozol, Nicolas},
   title={masala-parser: {J}avascript Parser Combinators},
   year={2020},
   url={https://github.com/masala/masala-parser},
   note={Accessed 2020-11-19}
-}
-
-@misc{ref14,
-  author={Lazic, Ranko},
-  title={{CS}310 Third Year Project Teaching Material},
-  year={2020},
-  url={https://warwick.ac.uk/fac/sci/dcs/teaching/material/cs310},
-  note={Accessed 2020-11-21}
-}
-
-@misc{ref15,
-  author={Jones, Adam},
-  title={gdoc2latex: Convert Google Docs files to LaTeX},
-  year={2020},
-  url={https://github.com/domdomegg/gdoc2latex},
-  note={Accessed 2020-11-21}
 }
